# logging

./: .clippy.toml  .gitignore  Cargo.toml  README.md
.github/workflows/: ci-cd.yml
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs  prelude.rs
crates/logging/src/configuration/: elapsed_time.rs  log_level.rs  mod.rs  target_filter.rs
crates/logging/src/construction/: logger.rs  logger_builder.rs  logger_builder_native.rs  logger_native.rs  logger_wasm.rs  mod.rs  shared_writer.rs
crates/logging/src/registration/: logger_factory.rs  mod.rs  with_logging.rs
