[package]
name = "studiole-logging"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Opinionated logging for `studiole-di`"

[dependencies]
serde = { workspace = true }
studiole-di = { workspace = true }
studiole-report = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
